--- a/app/src/main/res/layout/activity_new__task_activity.xml
+++ b/app/src/main/res/layout/activity_new__task_activity.xml
@@ -278,37 +278,39 @@
 
         <LinearLayout
             android:id="@+id/important1"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_marginTop="15dp"
+            android:layout_width="406dp"
+            android:layout_height="54dp"
             android:layout_marginStart="30dp"
+            android:layout_marginTop="15dp"
             android:layout_marginEnd="30dp"
             android:orientation="horizontal"
             android:weightSum="1"
-            app:layout_constraintTop_toBottomOf="@id/time"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintTop_toBottomOf="@id/time">
 
             <RelativeLayout
                 android:id="@+id/important"
-                android:layout_width="wrap_content"
+                android:layout_width="138dp"
                 android:layout_height="match_parent"
-                android:background="@color/white"
                 android:layout_marginStart="30dp"
+                android:background="@color/white"
                 app:layout_constraintStart_toStartOf="parent">
+
                 <ImageView
                     android:id="@+id/mypersonImageView1"
                     android:layout_width="15dp"
                     android:layout_height="15dp"
-                    android:background="@drawable/star_icon"
+                    android:layout_centerVertical="true"
                     android:layout_marginStart="10dp"
-                    android:layout_centerVertical="true"/>
+                    android:background="@drawable/star_icon" />
 
                 <TextView
-                    android:layout_width="101dp"
+                    android:layout_width="90dp"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
+                    android:layout_alignParentEnd="true"
                     android:layout_marginStart="15dp"
+                    android:layout_marginEnd="8dp"
                     android:layout_toEndOf="@id/mypersonImageView1"
                     android:text="Important"
                     android:textColor="@color/colorPrimaryDark1"
@@ -317,7 +319,7 @@
 
             <RelativeLayout
                 android:id="@+id/reminder"
-                android:layout_width="wrap_content"
+                android:layout_width="192dp"
                 android:layout_height="40dp"
                 android:layout_marginStart="15sp"
                 android:layout_marginEnd="30dp"
@@ -327,18 +329,18 @@
                     android:id="@+id/mypersonImageView2"
                     android:layout_width="12dp"
                     android:layout_height="12dp"
-                    android:background="@drawable/notification_icon2"
+                    android:layout_centerVertical="true"
                     android:layout_marginStart="10dp"
-                    android:layout_centerVertical="true"/>
+                    android:background="@drawable/notification_icon2" />
 
                 <TextView
                     android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:textColor="@color/colorPrimaryDark1"
                     android:layout_marginStart="15dp"
                     android:layout_toEndOf="@id/mypersonImageView2"
                     android:text="Reminder"
+                    android:textColor="@color/colorPrimaryDark1"
                     android:textSize="13dp" />
             </RelativeLayout>
         </LinearLayout>
